# flan

./: .gitignore  .gitmodules
manual-simple-pa/: datagen.sh  pointsto.dl  rules.dl  simple_pa_manual.cpp  test.cpp  time_script.sh  utils.sh
manual-simple-pa/abseil/: CMakeLists.txt  abseil_pa_manual.cpp
manual-simple-pa/boost/: CMakeLists.txt  simple_pa_manual.cpp
manual-simple-pa/boost-oa/: simple_pa_manual.cpp
manual-simple-pa/custom/: CMakeLists.txt  abseil_pa_manual.cpp  simple_pa_manual.cpp  test.cpp  testHash.cpp
souffle-simple-pa/: output.cpp  pointsto.ram  souffle-generate.txt
souffle-simple-pa/facts/: AssignAlloc.facts
souffle-simple-pa/facts-100/: AssignAlloc.facts  Load.facts  PrimitiveAssign.facts  Store.facts
souffle-simple-pa/facts-toy/: AssignAlloc.facts  Load.facts  PrimitiveAssign.facts  Store.facts
